--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -14,6 +14,14 @@
         android:layout_weight="8"
         android:background="@android:color/background_light">
 
+        <LinearLayout
+            android:id="@+id/linearLayout5"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@android:color/holo_blue_bright"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
@@ -32,21 +40,30 @@
 
         <TextView
             android:id="@+id/dad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:background="@drawable/face"
             android:text=""
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="298dp" />
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="8dp" />
 
         <TextView
             android:id="@+id/dada"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/face"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/ic_face_black_24dp"
             android:text=""
-            tools:layout_editor_absoluteX="517dp"
+            tools:layout_editor_absoluteX="84dp"
             tools:layout_editor_absoluteY="8dp" />
+
+        <TextView
+            android:id="@+id/dadb"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/facec"
+            android:text=""
+            tools:layout_editor_absoluteX="154dp"
+            tools:layout_editor_absoluteY="0dp" />
 
         <LinearLayout
             android:id="@+id/linearLayout2"
@@ -96,7 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
 
             <TextView
                 android:id="@+id/textView15"
