--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,13 @@
         android:layout_weight="1"
         android:text="create new project"
         android:textSize="50sp" />
+
+    <Button
+        android:id="@+id/nexta2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="open existing project"
+        android:textSize="50sp"
+        />
 </LinearLayout>
