--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -14,13 +14,12 @@
         android:layout_weight="8"
         android:background="@android:color/background_light">
 
-        <LinearLayout
-            android:id="@+id/linearLayout5"
+        <TextView
+            android:id="@+id/textView13"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="@android:color/holo_blue_bright"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+            android:layout_weight="1"
+            android:background="#FF9800" />
 
         <TextView
             android:id="@+id/textView2"
@@ -44,8 +43,9 @@
             android:layout_height="70dp"
             android:background="@drawable/face"
             android:text=""
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="8dp" />
+            android:tag="dance1"
+            tools:layout_editor_absoluteX="7dp"
+            tools:layout_editor_absoluteY="0dp" />
 
         <TextView
             android:id="@+id/dada"
@@ -53,6 +53,7 @@
             android:layout_height="70dp"
             android:background="@drawable/ic_face_black_24dp"
             android:text=""
+            android:tag="dance2"
             tools:layout_editor_absoluteX="84dp"
             tools:layout_editor_absoluteY="8dp" />
 
@@ -62,7 +63,78 @@
             android:layout_height="70dp"
             android:background="@drawable/facec"
             android:text=""
+            android:tag="dance3"
             tools:layout_editor_absoluteX="154dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <TextView
+            android:id="@+id/dadc"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/faced"
+            android:text=""
+            android:tag="dance4"
+            tools:layout_editor_absoluteX="224dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <TextView
+            android:id="@+id/dadd"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/facee"
+            android:text=""
+            android:tag="dance5"
+            tools:layout_editor_absoluteX="285dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <TextView
+            android:id="@+id/dade"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/facef"
+            android:tag="dance6"
+            android:text=""
+            tools:layout_editor_absoluteX="339dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <TextView
+            android:id="@+id/dadf"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/faceg"
+            android:text=""
+            android:tag="dance7"
+            tools:layout_editor_absoluteX="389dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <TextView
+            android:id="@+id/dadg"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/faceh"
+            android:text=""
+            android:tag="dance8"
+            tools:layout_editor_absoluteX="447dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <TextView
+            android:id="@+id/dadh"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/facei"
+            android:text=""
+            android:tag="dance9"
+            tools:layout_editor_absoluteX="506dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+        <TextView
+            android:id="@+id/dadi"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:background="@drawable/facej"
+            android:text=""
+            android:tag="dance10"
+            tools:layout_editor_absoluteX="576dp"
             tools:layout_editor_absoluteY="0dp" />
 
         <LinearLayout
@@ -111,9 +183,8 @@
             android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
+            app:layout_constraintTop_toBottomOf="@+id/textView13">
 
             <TextView
                 android:id="@+id/textView15"
@@ -128,8 +199,8 @@
 
             <TextView
                 android:id="@+id/textView16"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_width="245dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:foregroundGravity="center"
@@ -161,6 +232,16 @@
 
             <TextView
                 android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:foregroundGravity="center"
+                android:gravity="center"
+                android:textColor="@android:color/background_dark" />
+
+            <TextView
+                android:id="@+id/textView18"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="center"
@@ -203,6 +284,16 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:foregroundGravity="center"
+                android:gravity="center"
+                android:textColor="@android:color/background_dark" />
+
+            <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -235,6 +326,46 @@
                 android:text="-----"
                 android:textColor="@android:color/background_dark" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/next"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="next frame"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout4" />
+
+        <Button
+            android:id="@+id/next4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="finish project"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toStartOf="@+id/next" />
+
+        <Button
+            android:id="@+id/previous"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:text="next frame"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+            app:layout_constraintStart_toStartOf="@+id/linearLayout" />
+
+        <TextView
+            android:id="@+id/frameDisplay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            android:text="TextView"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toStartOf="@+id/next"
+            app:layout_constraintHorizontal_bias="0.514"
+            app:layout_constraintStart_toEndOf="@+id/previous" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
