--- a/app/src/main/res/layout/activity_project_settings.xml
+++ b/app/src/main/res/layout/activity_project_settings.xml
@@ -7,6 +7,15 @@
     tools:context=".ProjectSettings"
     android:orientation="vertical">
 
+    <EditText
+        android:id="@+id/pName"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        android:ems="10"
+        android:hint="Please enter project name"
+        android:inputType="textPersonName" />
+
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
