--- a/app/src/main/res/layout/activity_show_files.xml
+++ b/app/src/main/res/layout/activity_show_files.xml
@@ -26,7 +26,7 @@
                 android:textSize="36sp" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/openProject"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
